kubernetes/home/ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "blog-ingress"
spec:
  rules:
    - host: "blog.home.while-true-do.io"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "blog-service"
                port:
                  number: 2368
...
